--- a/css_4e/css_4e/06/css/styles.css
+++ b/css_4e/css_4e/06/css/styles.css
@@ -28,3 +28,41 @@ table {
 	border-spacing: 0;
 } 
 /* конец кода сброса стилей браузера */
+
+@font-face {
+	font-family: 'PTSans';
+	src: url('fonts/PTSansRegular.woff2') format('woff2'),
+	url('fonts/PTSansRegular.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'PTSans';
+	src: url('fonts/PTSansItalic.woff2') format('woff2'),
+	url('fonts/PTSansItalic.woff') format('woff');
+	font-weight: normal;
+	font-style: italic;
+}
+@font-face {
+	font-family: 'PTSans';
+	src: url('fonts/PTSansBold.woff2') format('woff2'),
+	url('fonts/PTSansBold.woff') format('woff');
+	font-weight: bold;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'PTSans';
+	src: url('fonts/PTSansBoldItalic.woff2') format('woff2'),
+	url('fonts/PTSansBoldItalic.woff') format('woff');
+	font-weight: bold;
+	font-style: italic;
+}
+html {
+	font-family: PTSans, Arial, sans-serif;
+	font-size: 62.5%;
+}
+.main h1 {
+	color: rgb(249,212,120);
+	font-family: "Arial Black", Arial, Helvetica, sans-serif;
+	font-size: 4em;
+}
