--- a/css_4e/css_4e/13/styles.css
+++ b/css_4e/css_4e/13/styles.css
@@ -1,4 +1,7 @@
 /* сброс стилей браузера */
+* {
+	box-sizing: border-box;
+}
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
@@ -123,8 +126,30 @@ footer {
 	padding: 10px 10px 30px 10px;
 	background-color: black;
 	color: rgb(204,204,204);
+	clear: both;
 }
 footer a {
 	color: white;	
 }
 /* стили из практикума главы 13  */
+.sidebar1 {
+	float: left;
+	width: 20%;
+	padding: 0 20px 0 10px;
+}
+.main {
+	float: left;
+	width: 60%;
+	padding: 0 20px 0 20px;
+	border-left: dashed 1px rgb(153,153,153);
+	border-right: dashed 1px rgb(153,153,153);
+}
+.sidebar2 {
+	float: right;
+	width: 20%;
+	padding: 0 10px 0 10px;
+}
+nav ul, header h1, footer p, .pageWrapper {
+	max-width: 1200px;
+	margin: 0 auto;
+}
