--- a/css_4e/css_4e/17/nav-bar/base.css
+++ b/css_4e/css_4e/17/nav-bar/base.css
@@ -480,3 +480,11 @@ body {
   font-size: 4rem;
   margin: 0;
 }
+
+.banner {
+    display: flex;
+    align-items: flex-end;
+}
+.logo {
+    margin-right: auto;
+}
